--- a/src/app/qualification-editor/qualification-editor.component.html
+++ b/src/app/qualification-editor/qualification-editor.component.html
@@ -1,1 +1,20 @@
-<p>qualification-editor works!</p>
+<div class="container">
+    <app-status-bar [title]="'Qualifikation erstellen'" [saveable]="'true'" (saveEmit)="save()"></app-status-bar>
+    <div class="row mt-4">
+        <ng-container *ngIf="callbackAlertShown">
+          <div 
+          class="alert justify-content-end" 
+          [class.alert-success]="saveSuccess" 
+          [class.alert-danger]="!saveSuccess" 
+          role="alert">
+            {{saveMessage}}
+          </div>
+        </ng-container>
+    </div>
+    <div class="row">
+        <div class="row">
+            <label for="name" class="form-label">Name</label>
+            <input placeholder="Name" class="form-control" [(ngModel)]="qualification.skill"/>
+        </div>
+    </div>
+</div>
