added add button with routes for qualification

--- a/src/app/qualification-list/qualification-list.component.html
+++ b/src/app/qualification-list/qualification-list.component.html
@@ -6,6 +6,9 @@
       <div class="col"></div>
       <div class="col">
         <div class="row">
+          <div class="col-1 center-items">
+            <span class="material-icons text-success cursor-pointer" [routerLink]="['/qualification/editor']">add</span>
+          </div>
           <div class="col-7" id="searchBox">
             <form (submit)="searchForString()">
               <input class="form-control form" placeholder="Suche..." 
