Parametrised Confirmation Messages

--- a/src/app/confirmable-delete/confirmable-delete.component.html
+++ b/src/app/confirmable-delete/confirmable-delete.component.html
@@ -7,7 +7,7 @@
             </div>
             <hr>
             <div class="modal-body">
-                <p>Sollen die Objekte wirklich gelöscht werden?</p>
+                <p>{{ message }}</p>
             </div>
             <div class="modal-footer">
                 <button type="button" class="btn btn-secondary m-1" (click)="cancel()">Abbrechen</button>
