--- a/src/app/employee-list/employee-list.component.html
+++ b/src/app/employee-list/employee-list.component.html
@@ -46,7 +46,11 @@
     </table>
   </div>
   <div *ngIf="isAnythingSelected()" class="cursor-pointer expand">
-      <app-confirmable-delete [alignButtonRight]="'true'" (deleteEmit)="deleteEmployeeSelection()"></app-confirmable-delete>
+      <app-confirmable-delete 
+      [alignButtonRight]="'true'" 
+      (deleteEmit)="deleteEmployeeSelection()"
+      [message]="getDeleteConfirmationMessage()"
+      ></app-confirmable-delete>
   </div>
   <div *ngIf="(employees$ | async)?.length === 0">
     <p>Es wurden keine Mitarbeiter*innen gefunden.</p>
