--- a/src/app/confirmable-delete/confirmable-delete.component.css
+++ b/src/app/confirmable-delete/confirmable-delete.component.css
@@ -12,3 +12,14 @@
     border-color: rgb(212, 212, 212);
     background-color: white;
 }
+
+.dialog-background {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.507);
+    backdrop-filter: blur(2px);
+    transition: 0.2;
+}
