--- a/src/app/confirmable-delete/confirmable-delete.component.html
+++ b/src/app/confirmable-delete/confirmable-delete.component.html
@@ -1,21 +1,24 @@
-<div class="closable-modal" *ngIf="dialogShown">
-    <div class="modal-dialog">
-        <div class="modal-content">
-            <div class="modal-header">
-                <h5 class="modal-title">Bestätigung</h5>
-                <button type="button" class="btn-close" (click)="cancel()"></button>
-            </div>
-            <hr>
-            <div class="modal-body">
-                <p>{{ message }}</p>
-            </div>
-            <div class="modal-footer">
-                <button type="button" class="btn btn-secondary m-1" (click)="cancel()">Abbrechen</button>
-                <button type="button" class="btn btn-danger m-1" (click)="confirmDelete()">Löschen</button>
+<ng-container *ngIf="dialogShown">
+    <div class="dialog-background"></div>
+    <div class="closable-modal">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title">Bestätigung</h5>
+                    <button type="button" class="btn-close" (click)="cancel()"></button>
+                </div>
+                <hr>
+                <div class="modal-body">
+                    <p>{{ message }}</p>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary m-1" (click)="cancel()">Abbrechen</button>
+                    <button type="button" class="btn btn-danger m-1" (click)="confirmDelete()">Löschen</button>
+                </div>
             </div>
         </div>
     </div>
-</div>
+</ng-container>
 <ng-container *ngIf="alignButtonRight === 'true'; else notAligned">
     <h1 style="text-align: right;"><span class="material-icons text-danger cursor-pointer" (click)="delete()">delete</span></h1>
 </ng-container>
