Implemented Keycloak SSO

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,2 @@
-<app-navigation-bar [itemsShown]="isTokenAvailable()"></app-navigation-bar>
-<ng-container *ngIf="isTokenAvailable(); else loggedOut">
-    <router-outlet></router-outlet>
-</ng-container>
-<ng-template #loggedOut>
-    <div>
-        <app-login></app-login>
-    </div>
-</ng-template>
+<app-navigation-bar [itemsShown]="true"></app-navigation-bar>
+<router-outlet></router-outlet>
