added automatic margin to editor inputs

--- a/src/app/employee-editor/employee-editor.component.html
+++ b/src/app/employee-editor/employee-editor.component.html
@@ -10,7 +10,7 @@
         </div>
       </ng-container>
     </div>
-    <div class="row">
+    <div class="row m-auto">
       <div class="row my-2">
         <label for="firstName" class="form-label">Vorname</label>
         <input type="email" class="form-control" id="firstName" placeholder="Max" [(ngModel)]="employee.firstName">
