--- a/src/app/qualification-editor/qualification-editor.component.html
+++ b/src/app/qualification-editor/qualification-editor.component.html
@@ -11,7 +11,7 @@
           </div>
         </ng-container>
     </div>
-    <div class="row">
+    <div class="row m-auto">
         <div class="row">
             <label for="name" class="form-label">Name</label>
             <input placeholder="Name" class="form-control" [(ngModel)]="qualification.skill"/>
