fixed detail proportions

--- a/src/app/employee-details/employee-details.component.html
+++ b/src/app/employee-details/employee-details.component.html
@@ -11,7 +11,7 @@
             </div>
         </ng-container>
         <div class="row">
-            <div class="col-2">
+            <div class="col">
                 <p>Vorname:</p>
                 <p>Nachname:</p>
                 <p>Straße:</p>
@@ -19,7 +19,7 @@
                 <p>Stadt:</p>
                 <p>Telefonnummer:</p>
             </div>
-            <div class="col-2">
+            <div class="col">
                 <p>{{ this.employee?.firstName }}</p>
                 <p>{{ this.employee?.lastName }}</p>
                 <p>{{ this.employee?.street }}</p>
@@ -30,7 +30,7 @@
         </div>
         <div class="row margin-y-10">
             <h5>Qualifikationen</h5>
-            <div class="col-4">
+            <div class="col">
                 <table class="table">
                     <thead>
                         <th>Name</th>
