--- a/src/app/qualification-details/qualification-details.component.html
+++ b/src/app/qualification-details/qualification-details.component.html
@@ -9,16 +9,16 @@
             </div>
         </ng-container>
         <div class="row">
-            <div class="col-2">
+            <div class="col">
                 <p>Name:</p>
             </div>
-            <div class="col-2">
+            <div class="col">
                 <p>{{ this.qualification?.skill }}</p>
             </div>
         </div>
         <div class="row">
             <h5>Mitarbeiter</h5>
-            <div class="col-5">
+            <div class="col">
                 <table class="table">
                     <thead>
                         <th>ID</th>
